trying to switch to fetch because htmx isn't powerful enough